@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*brakeman-2.2.0 (29 Nov 2013)
+
+  29 Nov 2013; Hans de Graaff <graaff@gentoo.org> +brakeman-2.2.0.ebuild:
+  Version bump.
+
 *brakeman-2.1.2 (25 Oct 2013)
 
   25 Oct 2013; Hans de Graaff <graaff@gentoo.org> +brakeman-2.1.2.ebuild:
